# agent-learning

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: harness-code-reviewer.md  paper-reader.md
.claude/hooks/: block-pip.sh  ruff-check.sh
.claude/rules/: language.md  learning-notes.md  python-deps.md  python.md
.claude/skills/new-note/: SKILL.md
.claude/skills/progress/: SKILL.md
anthropic-blog/: reading-list.md
stage1-harness/: README.md
stage1-harness/hands-on/min-agent-loop/: README.md  check_api.py  code.py  code_stream.py
stage1-harness/hands-on/s02-tool-dispatch/: .env.example  README.md  code.py  test_tools.py
stage2-rl-posttraining/: README.md
stage2-rl-posttraining/hands-on/grpo-gsm8k/: README.md
stage3-agentic-rl/: README.md
stage3-agentic-rl/hands-on/multiturn-grpo/: README.md
